# pdf-features

./: .gitignore  Makefile  README.md  configuration.py  dev-requirements.txt  justfile  pyproject.toml
pdf_features/: HyperlinkStyle.py  ListLevel.py  PdfFeatures.py  PdfFont.py  PdfPage.py  PdfToken.py  PdfTokenStyle.py  Rectangle.py  __init__.py  configuration.py
pdf_features/tests/: test_pdf_features.py  test_pdf_token_styles.py
pdf_token_type_labels/: TaskMistakes.py  __init__.py  configuration.py
tests/: test_pdf_token_styles.py
